--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ a{
 }
 .navbar ul li:hover{
     border-bottom: 2px solid #FF7527;
+    
 }
 /* Nav Part end */
 /* Banner Part Start */
@@ -40,7 +41,7 @@ a{
     padding-top: 60px;
 }
 .banner-part .info-part p{
-    width: 80%;
+    width: 75%;
     font-size: 16px;
     font-family: "Poppins", serif;
     font-weight: light;
@@ -49,14 +50,44 @@ a{
     padding-bottom: 56px;
 }
 .banner-part .info-part form {
-
     position: relative;
+    display: flex;
+    flex-direction: column;
+    
+}
+.input-field{
+    position: relative;
+    margin: 10px 0;
 }
 .banner-part .info-part form input{
-    width: 90%;
-    height: 55px;
-    border: 0;
+    width: 85%;
+    height: 65px;
+    border: none;
+    outline: none;
+    font-size: 16px;
     border-radius: 15px;
+
+}
+.banner-part .info-part label{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translateY(-50%);
+    font-size: 16px;
+    font-family: "Poppins", serif;
+    color: rgba(32, 50, 57, 55%);
+    pointer-events: none;
+    transition: 0.15s ease;
+    margin-left: 15px;
+}
+.banner-part .info-part label i{
+    margin-right: 10px;
+    color: #203239;
+}
+.input-field input:focus~label, 
+.input-field input:valid~label{
+    top: 10px;
+    transform: translateY(-125%);
 }
 .banner-part .info-part form .button a {
     display: inline-block;
@@ -71,14 +102,10 @@ a{
     -moz-box-shadow: -1px 5px 5px -6px rgba(32,50,57,0.61);
     box-shadow: -1px 5px 5px -6px rgba(32,50,57,0.61);
     position: absolute;
-    top: 5px;
-    right: 85px;
-}
-.info-part .fa-solid {
-    position: absolute;
     top: 20px;
-    left: 35px;
+    right: 120px;
 }
+
 .info-part .info{
   padding-top: 56px;
 }
@@ -100,3 +127,76 @@ a{
     color: rgba(32, 50, 57, 55%);
 }
 /* Banner Part end */
+/* Cart Part start */
+.cart-part{
+    padding: 50px 0;
+}
+.cart-part .card-body{
+    position: relative;
+}
+.cart-part h2 {
+    width: 47%;
+    font-size: 36px;
+    font-family: "Poppins", serif;
+    font-weight: 500;
+    color: rgba(32, 50, 57,100%);
+    padding-top: 60px;
+}
+.cart-part .card-info{
+    display: flex;
+    justify-content: space-between;
+    padding-top: 60px;
+    position: relative;
+}
+.cart-part .card-info h5{
+    padding-left: 8px;
+    font-size: 16px;
+    font-family: "Poppins", serif;
+    font-weight: 500;
+    color: rgba(32, 50, 57,100%);
+}
+.cart-part .card-info p{
+    padding-left: 8px;
+    width: 96%;
+    font-size: 16px;
+    font-family: "Poppins", serif;
+    font-weight: light;
+    color: rgba(32, 50, 57,55%);
+    line-height: 30px;
+    padding-bottom: 30px;
+}
+.card-info .arrow{
+    position: absolute;
+    bottom: 5px;
+}
+.cart-part .card-info h6{
+    padding-left: 8px;
+    font-size: 16px;
+    font-family: "Poppins", serif;
+    font-weight: 300;
+    color: rgba(32, 50, 57,100%);
+}
+.cart-part .card-info h6 span{
+    background: rgba(32, 50, 57,55%)
+}
+.cart-part .card-info i{
+    padding-left: 10px;
+}
+.cart-part .card-info .line{
+    width: 8px;
+    height: 30px;
+    background: #FF7527;
+    border-radius: 8px;
+    position: absolute;
+    top: 35px;
+    left: 0;
+}
+.cart-part .card-info .number{
+    display: flex;
+    justify-content: flex-end;
+    color: #FF7527;
+    font-size: 16px;
+    font-family: "Poppins", serif;
+    font-weight: 400;
+}
+/* Cart Part end */
