Cart-part responsive

--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,19 @@ a{
 .box{
     display: flex;
 }
+p{
+    font-size: 16px;
+    font-family: "Poppins", serif;
+    font-weight: light;
+    color: rgba(32, 50, 57, 55%);
+}
 /* Nav Part Start */
 .navbar{
     background: #EEEDDE;
     padding-top: 57px;
 }
 .navbar ul {
-    display: flex;
-    justify-content: flex-end;
+  
     column-gap: 100px;
 }
 .navbar ul li{
@@ -87,7 +92,7 @@ a{
 .input-field input:focus~label, 
 .input-field input:valid~label{
     top: 10px;
-    transform: translateY(-125%);
+    transform: translateY(-150%);
 }
 .banner-part .info-part form .button a {
     display: inline-block;
@@ -214,15 +219,15 @@ a{
 .favorit {
     background: #EEEDDE;
     padding: 40px 0;
-    padding-bottom: 150px;
+    padding-bottom: 170px;
 }
-.favorit .common-heading p{
+.common-heading p{
     font-size: 16px;
     font-family: "Poppins", serif;
     font-weight: 400;
     color: #FF7527;
 }
-.favorit .common-heading h3{
+.common-heading h3{
     font-size: 36px;
     font-family: "Poppins", serif;
     font-weight: 500;
@@ -287,3 +292,124 @@ a{
     font-weight: 500;
 }
 /* Favorit Part end */
+/* Berbagai Part start */
+.berbagai{
+    padding: 50px 0;
+}
+.berbagai .box{
+    justify-content: space-between;
+    position: relative;
+}
+.berbagai .box .slide-ber {
+    position: absolute;
+    top: 50px;
+    right: 150px;
+}
+.berbagai .box .slide-ber .slide-icon {
+    display: flex; 
+    column-gap: 30px;       
+}
+.berbagai .box .slide-ber .slide-icon span {
+    padding: 7px 10px;
+    border-radius: 6px;      
+}
+.berbagai .box .slide-ber .slide-icon span:first-child {
+    color: rgba(255, 117, 39, 55%);
+    rotate: 180deg;
+    border: 1px solid rgba(32, 50, 57,55%);       
+}
+.berbagai .box .slide-ber .slide-icon span:last-child {
+    color: #FF7527;
+    border: 1px solid rgba(32, 50, 57,55%);       
+}
+.berbagai .box .slide-ber .slide-icon span:last-child:hover {
+    background: rgba(32, 50, 57,25%);       
+}
+.berbagai .info{
+    padding-top: 30px;
+}
+.berbagai  .info .image{
+    width: 95%;
+    height: 400px;
+   
+}
+.berbagai .info .image img{
+    width: 100%;
+    height: 100%;
+}
+.berbagai .info h5{
+    font-size: 24px;
+    font-family: "Poppins", serif;
+    font-weight: 400;
+    color: rgba(32, 50, 57, 100%);
+    padding-top: 25px;
+}
+/* Berbagai Part end */
+/* Hubungi Part end */
+.hubungi{
+    padding: 50px 0;
+    background: #EEEDDE;
+}
+.hubungi h4{
+    font-size: 36px;
+    font-family: "Poppins", serif;
+    font-weight: 500;
+    color: rgba(32, 50, 57, 100%);
+    padding-bottom: 35px;
+}
+.hubungi .box{
+    column-gap: 50px;
+}
+.hubungi .call{
+   border: 1px solid rgba(255, 117, 39,20%);
+   border-radius: 10px;
+   padding: 20px 35px;
+}
+.hubungi .call p:first-child{
+    font-weight: 500;
+}
+.hubungi .call .info{
+   display: flex;
+   align-items: center;
+   column-gap: 20px;
+}
+.hubungi .call .info i{
+
+   font-size: 30px;
+}
+.hubungi .button {
+    padding-top: 15px;   
+}
+.hubungi .button a{
+    color: white;
+    font-size: 16px;
+    font-family: "Poppins", serif;
+    font-weight: 500;
+    background: rgba(255, 117, 39,100%);
+    padding: 13px 60px;
+    border-radius: 10px;
+    border: 1px solid rgba(32, 50, 57, 30%);
+    width: 90%;
+    margin: 0 auto;    
+}
+.hubungi .button a:hover{
+    background: rgba(32, 50, 57, 30%);    
+}
+/* Hubungi Part end */
+/* footer Part start */
+.footer{
+    background: #203239;
+    padding: 15px 0;
+}
+.footer .icon ul{
+    list-style: none;
+    display: flex;
+    column-gap: 40px;
+    justify-content: flex-end;
+}
+.footer .icon ul li{
+    font-size: 24px;
+    color: white;
+}
+
+/* footer Part end */
