final responsive done

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -91,6 +91,7 @@
     /* card-part end */
     /* Favorit start */
     .common-heading .fa-heading{
+        
         font-size: 24px;
     }
     .common-heading .fa-para{
@@ -101,6 +102,7 @@
     }
     .favorit .info-part .fa2-heading{
         font-size: 28px;
+      
     }
     .favorit .info-part .fa2-para{
         font-size: 14px;
@@ -137,6 +139,324 @@
     }
     .hubungi .button .a{
         font-size: 14px;
+    }
+    /* hubungi-part end */
+    /* footer-part start */
+    .footer .icon .ul{
+        padding: 0;
+        margin: 0;
+        justify-content: flex-start;
+    }
+    /* footer-part end */
+}
+@media (min-width:576px) and (max-width:765.99px){
+   
+/* nav part start */
+.navbar-toggler-icon{
+    width: 18px;
+}
+.navbar-nav{
+    margin-top: 20px;
+    background: rgb(38, 114, 150);
+    text-align: center;
+    border-radius: 10px;
+}
+.nav-item a{
+    font-size: 14px;
+}
+.navbar .nav-item:hover{
+    border-bottom: 2px solid transparent;
+    
+}
+
+/* nav part end */
+/* banner-part start */
+    .banner-part .info-part .heading {
+        font-size: 34px;
+        width: 100%;
+        padding-top: 0;
+    }
+    .banner-part .info-part .b-para{
+        font-size: 14px;
+        width: 100%;
+        padding-bottom: 30px;
+    }
+    .banner-part .info-part .form .input{
+        width: 100%;
+        height: 40px;
+        
+    }
+    .banner-part .info-part .form .label{
+        font-size: 14px;
+        width: 95%;
+    }
+    .banner-part .info-part .form .button {
+     
+        text-align: center;
+    }
+    .banner-part .info-part .form .button .a {
+       position: initial;
+       top: auto;
+       left: auto;
+       
+    }
+    .banner-part .info-part .box{
+        flex-direction: column;
+    }
+    .banner-part .info-part .box .info{
+       text-align: center;
+       padding-top: 10px;
+       padding-bottom: 0;
+    }
+    .banner-part .info-part .box .info .info-para{
+       width: 100%;
+       padding-top: 0;
+    }
+    .banner-part .b-image{
+        width: 100%;
+    }
+    /* banner-part end */
+    /* card-part start */
+    .cart-part{
+        padding: 20px 0 !important;
+    }
+    .cart-part .cart-heading{
+        font-size: 28px;
+        width: 100%;
+    }
+    .cart-part .card {
+        border: 1px solid rgba(32, 50, 57, 55%) !important;
+        border-radius: 10px;
+        margin-top: 10px;
+    }
+    .cart-part .card-body:hover {
+        border: 1px solid transparent !important;
+        
+    }
+    .cart-part .card-info{
+        flex-direction: column;
+        justify-self: center;
+        align-items: center;
+    }
+    .cart-part .card-info .card-text{
+        font-size: 14px;
+    }
+    /* card-part end */
+    /* Favorit start */
+    .favorit{
+        padding-bottom: 50px !important;
+    }
+    .common-heading .fa-heading{
+        font-size: 24px;
+    }
+    .common-heading .fa-para{
+        font-size: 14px;
+    }
+    .favorit .image-part{
+        padding-top: 20px !important;
+    }
+    .favorit .info-part .fa2-heading {
+        font-size: 28px;
+        padding-top: 100px;
+    }
+    .favorit .info-part .fa2-para{
+        font-size: 14px;
+    }
+    .favorit .info-part .button1{
+       width: 100%;
+    }
+    .favorit .info-part .button2{
+       width: 100%;
+    }
+    
+    /* Favorit end */
+    /* berbagai-part start */
+    .berbagai .box .slide-ber .slide-icon .fa-solid{
+       width: 10px;
+    }
+    .berbagai .info .ber-heading{
+        font-size: 20px;
+    }
+    .berbagai .info .ber-para{
+        font-size: 14px;
+    }
+    /* berbagai-part end */
+    /* hubungi-part end */
+    .hubungi .hub-heading{
+        font-size: 28px;
+    }
+    .hubungi .hub2-heading{
+        font-size: 28px;
+        padding-top: 22px;
+    }
+    .hubungi .box{
+        justify-content: center;
+        align-items: center;
+    }
+    .hubungi .common-para{
+        font-size: 14px;
+    }
+    .hubungi .button .a{
+        font-size: 14px;
+    }
+    /* hubungi-part end */
+    /* footer-part start */
+    .footer .icon .ul{
+        padding: 0;
+        margin: 0;
+        justify-content: flex-start;
+    }
+    /* footer-part end */
+}
+@media (min-width:766px) and (max-width:991.99px){
+   
+/* nav part start */
+.navbar-toggler-icon{
+    width: 20px;
+}
+.navbar-nav{
+    margin-top: 20px;
+    background: rgb(38, 114, 150);
+    text-align: center;
+    border-radius: 10px;
+}
+.nav-item a{
+    font-size: 16px;
+}
+.navbar .nav-item:hover{
+    border-bottom: 2px solid transparent;
+    
+}
+
+/* nav part end */
+/* banner-part start */
+    .banner-part .info-part .heading {
+        font-size: 36px;
+        width: 100%;
+        padding-top: 0;
+    }
+    .banner-part .info-part .b-para{
+        font-size: 16px;
+        width: 100%;
+        padding-bottom: 30px;
+    }
+    .banner-part .info-part .form .input{
+        width: 100%;
+        height: 40px;
+        
+    }
+    .banner-part .info-part .form .label{
+        font-size: 16px;
+        width: 95%;
+    }
+    .banner-part .info-part .form .button {
+     
+        text-align: center;
+    }
+    .banner-part .info-part .form .button .a {
+       position: initial;
+       top: auto;
+       left: auto;
+       
+    }
+    .banner-part .info-part .box{
+        flex-direction: column;
+    }
+    .banner-part .info-part .box .info{
+       text-align: center;
+       padding-top: 10px;
+       padding-bottom: 0;
+    }
+    .banner-part .info-part .box .info .info-para{
+       width: 100%;
+       padding-top: 0;
+    }
+    .banner-part .b-image{
+        width: 100%;
+    }
+    /* banner-part end */
+    /* card-part start */
+    .cart-part{
+        padding: 20px 0 !important;
+    }
+    .cart-part .cart-heading{
+        font-size: 32px;
+        width: 100%;
+    }
+    .cart-part .card {
+        border: 1px solid rgba(32, 50, 57, 55%) !important;
+        border-radius: 10px;
+        margin-top: 10px;
+    }
+    .cart-part .card-body:hover {
+        border: 1px solid transparent !important;
+        
+    }
+    .cart-part .card-info{
+        flex-direction: column;
+        justify-self: center;
+        align-items: center;
+    }
+    .cart-part .card-info .card-text{
+        font-size: 16px;
+    }
+    /* card-part end */
+    /* Favorit start */
+    .favorit{
+        padding-bottom: 50px !important;
+    }
+    .common-heading .fa-heading{
+        font-size: 28px;
+    }
+    .common-heading .fa-para{
+        font-size: 16px;
+    }
+    .favorit .image-part{
+        padding-top: 20px !important;
+    }
+    .favorit .info-part .fa2-heading {
+        font-size: 32px;
+        padding-top: 100px;
+    }
+    .favorit .info-part .fa2-para{
+        font-size: 16px;
+    }
+    .favorit .info-part .button1{
+       width: 100%;
+    }
+    .favorit .info-part .button2{
+       width: 100%;
+    }
+    
+    /* Favorit end */
+    /* berbagai-part start */
+    .berbagai .box .slide-ber .slide-icon .fa-solid{
+       width: 10px;
+    }
+    .berbagai .info .ber-heading{
+        font-size: 24px;
+    }
+    .berbagai .info .ber-para{
+        font-size: 16px;
+    }
+    /* berbagai-part end */
+    /* hubungi-part end */
+    .hubungi .hub-heading{
+        font-size: 32px;
+    }
+    .hubungi .hub2-heading{
+        font-size: 32px;
+        padding-top: 22px;
+    }
+    .hubungi .box{
+        justify-content: center;
+        align-items: center;
+    }
+    .hubungi .common-para{
+        font-size: 16px;
+    }
+    .hubungi .button .a{
+        font-size: 16px;
     }
     /* hubungi-part end */
     /* footer-part start */
